[fix] ajustes de referencia

--- a/index.html
+++ b/index.html
@@ -23,30 +23,6 @@
 </head>
 <body>
   <script type="text/javascript">
-/*
-     Official Website : https://OpenSpeedTest.COM | Email: support@openspeedtest.com
-     Developed by : Vishnu | https://Vishnu.Pro | Email : me@vishnu.pro 
-            
-     HTML5 Network Performance Estimation Tool -> [JS,XHR,SVG,HTML,CSS]
-     Started in 2011 and Moved to OpenSpeedTest.COM, Dedicated Project/Domain Name in 2013.
-     SpeedTest Script -> 2013 -> Beta | 2015 -> V1 | 2019 ->V2 | 2020 V2.1 | 2021 V2.12 | 2022 V2.5 & 2.5.3
-     Self-Hosted OpenSpeedTest-Server (iFrame/Nginx) -> 2014. (Managed SelfHosted SpeedTesT Widget)
-     OpenSpeedTest-Server (On-premises) (Fully SelfHosted Apps)
-     [OpenSpeedTest-Server Docker Image] -> V1 2019 | V2 2020 | V2.1 2021 | V2.2 & 2.2.2 2022
-     [Node.js/Electron JS  OpenSpeedTest-Server Desktop Apps] -> 2020 V1 | 2021 V2 & V2.1 | 2.1.1 to 2.1.8 2022
-     [Ionic Android and iOS OpenSpeedTest-Server Mobile Apps] V1.2 to 1.5 2022 
-
-     Download Now -> https://go.openspeedtest.com/Server
-
-     Like this Project? Please Donate NOW & Keep us Alive -> https://go.openspeedtest.com/Donate
-
-     Speed Test by DRIXAN️ is Free and Open-Source Software (FOSS) with MIT License.
-     Read full license terms @ http://go.openspeedtest.com/License
-
-     If you have any Questions, ideas or Comments Please Send it via -> https://go.openspeedtest.com/SendMessage
-*/
-
-     // Add or Remove Server --> Automatically choose the one with the least latency
     var openSpeedTestServerList = [
         {"ServerName":"Home", "Download":"downloading", "Upload":"upload", "ServerIcon":"DefaultIcon"}
       ];
@@ -138,16 +114,6 @@ function ostOnload() {
 
   </script>
 
-<!--
-Speed Test by DRIXAN️ is Free and Open-Source Software with MIT License.
-
-You can play with the CSS, HTML & SVG files to change the colors or add your support desk info to this page.
-Also, you can add your company logo anywhere on this page. It's FOSS. You can do whatever you see fit.
-
-If you like to make any other modification to this application or need a custom deployment for your organization, 
-please get in touch with support@openspeedtest.com.
--->
-
   <div id="loading_app" class="spinner">
     <div class="bounce1"></div>
     <div class="bounce2"></div>
@@ -157,7 +123,7 @@ please get in touch with support@openspeedtest.com.
  
   <div class="Credits">
     <a target="_blank">DRIXAN SpeedTest</a>
-    <p style="font-size: 12px;">&copy; Copyright 2013-2024 DRIXAN All Rights Reserved.</p>
+    <p style="font-size: 12px;">&copy; Copyright 2024 DRIXAN All Rights Reserved.</p>
 </div>
   
   <script src="assets/js/app-2.5.4.min.js"></script>
