--- a/index.html
+++ b/index.html
@@ -122,11 +122,11 @@ function ostOnload() {
   <object style="visibility:hidden" id="OpenSpeedTest-UI" data="assets/images/app.svg" type="image/svg+xml"></object>
  
   <div class="Credits">
-    <a target="_blank">DRIXAN SpeedTest</a>
+    <p>DRIXAN SpeedTest</p>
     <p style="font-size: 12px;">&copy; Copyright 2024 DRIXAN All Rights Reserved.</p>
 </div>
   
-  <script src="assets/js/app-2.5.4.min.js"></script>
+  <script src="assets/js/app-2.5.4.js"></script>
   <script src="assets/js/darkmode.js"></script>
 
 </body>
